cmake_minimum_required(VERSION 3.15)
project(Offer)

set(CMAKE_CXX_STANDARD 14)

add_executable(Offer main.cpp offer3.cpp offer5.cpp ooffer9.cpp offer10.cpp offer11.cpp offer12.cpp offer13.cpp offer14.cpp offer17.cpp offer18.cpp offer19.cpp offer21.cpp offer22.cpp offer24.cpp offer25.cpp offer26.cpp offer27.cpp offer28.cpp offer29.cpp offer30.cpp offer31.cpp offer32.cpp offer32-2.cpp offer32-3.cpp offer33.cpp offer34.cpp offer35.cpp offer36.cpp offer37.cpp offer39.cpp offer40.cpp offer42.cpp offer44.cpp offer45.cpp offer46.cpp offer47.cpp offer48.cpp offer50.cpp offer52.cpp offer53-I.cpp offer53-II.cpp offer54.cpp offer55-I.cpp offer56-I.cpp offer56-II.cpp offer57.cpp offer58.cpp offer58.cpp offer60.cpp NC119.cpp)